--- a/jquery.ez.menu.css
+++ b/jquery.ez.menu.css
@@ -28,8 +28,9 @@ ul.ez_menu {
 ul.ez_menu li{
 	float: left;
 	font-weight: bold;
-	padding: 8px 12px 6px 12px;
+	padding: 8px 12px 4px 12px;
 	position: relative;
+	z-index: 10;
 }
 
 ul.ez_menu li a {
@@ -40,28 +41,28 @@ ul.ez_menu li a:hover {
 	text-decoration: none;
 }
 
-ul.ez_menu li.menu_hover1_on {
+ul.ez_menu li.menu_hover_on {
 	background-color: #EEEEEE;
 }
 
-ul.ez_menu li.menu_hover1_on a {
+ul.ez_menu li.menu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.menu_hover1_off {
+ul.ez_menu li.menu_hover_off {
 	background-color: #DDDDDD;
 }
 
-ul.ez_menu li.menu_hover2_on {
+ul.ez_menu li.submenu_hover_on {
 	background: #FFFFFF url( images/arrow_asc.gif ) no-repeat right center;
 	padding-right: 20px;
 }
 
-ul.ez_menu li.menu_hover2_on a {
+ul.ez_menu li.submenu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.menu_hover2_off {
+ul.ez_menu li.submenu_hover_off {
 	background: #DDDDDD none;
 	padding-right: 6px;
 }
@@ -75,7 +76,9 @@ ul.ez_menu ul.menu_list {
 	list-style-type: none;
 	padding: 0px;
 	position: absolute;
-	top: 30px;
+	top: 31px;
+	white-space: nowrap;
+	width: 150px;
 }
 
 ul.ez_menu ul.menu_list li {
@@ -84,7 +87,7 @@ ul.ez_menu ul.menu_list li {
 	width: 100%;
 }
 
-ul.ez_menu li.menu_hover2_on ul.menu_list li a {
+ul.ez_menu li.submenu_hover_on ul.menu_list li a {
 	color: #787878;
 	display: block;
 	height: 16px;
@@ -94,6 +97,16 @@ ul.ez_menu li.menu_hover2_on ul.menu_list li a {
 
 ul.ez_menu ul.menu_list li a:hover {
 	text-decoration: none;
+}
+
+ul.ez_menu ul.menu_list li.submenu {
+	border-top: 1px dashed #DDDDDD;
+}
+
+ul.ez_menu ul.menu_list li.submenu ul {
+	border: 1px solid #DDDDDD;
+	left: 100%;
+	top: -1px;
 }
 
 ul.ez_menu ul.menu_list a.opt_hover_on {
