--- a/demo.css
+++ b/demo.css
@@ -22,31 +22,31 @@ ul.ez_menu li{
 	font-weight: bold;
 }
 
-ul.ez_menu li a:hover {
+ul.ez_menu li a {
 	text-decoration: none;
 }
 
-ul.ez_menu li.menu_hover1_on {
+ul.ez_menu li.menu_hover_on {
 	background-color: #EEEEEE;
 }
 
-ul.ez_menu li.menu_hover1_on a {
+ul.ez_menu li.menu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.menu_hover1_off {
+ul.ez_menu li.menu_hover_off {
 	background-color: #DDDDDD;
 }
 
-ul.ez_menu li.menu_hover2_on {
+ul.ez_menu li.submenu_hover_on {
 	background: #FFFFFF url( images/arrow_asc.gif ) no-repeat right center;
 }
 
-ul.ez_menu li.menu_hover2_on a {
+ul.ez_menu li.submenu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.menu_hover2_off {
+ul.ez_menu li.submenu_hover_off {
 	background: #DDDDDD none;
 }
 
@@ -54,13 +54,22 @@ ul.ez_menu ul.menu_list {
 	background-color: #FFFFFF;
 	border: 1px solid #DDDDDD;
 	border-top: none;
+	width: 150px;
 }
 
 ul.ez_menu ul.menu_list li {
 	font-weight: normal;
 }
 
-ul.ez_menu li.menu_hover2_on ul.menu_list li a {
+ul.ez_menu ul.menu_list li.submenu {
+	border-top: 1px dashed #DDDDDD;
+}
+
+ul.ez_menu ul.menu_list li.submenu ul {
+	border: 1px solid #DDDDDD;
+}
+
+ul.ez_menu ul.menu_list li a {
 	color: #787878;
 }
 
