--- a/demo.css
+++ b/demo.css
@@ -13,21 +13,34 @@
 
 ul.ez_menu {
 	background-color: #DDDDDD;
-	border: 1px solid #FFFFFF;
-	border-bottom: 1px solid #CCCCCC;
+	border: 1px solid #DDDDDD;
+	height: 34px;
+	width: 100%;
 }
 
-ul.ez_menu li{
-	font-weight: bold;
-	padding-right: 20px;
+ul.ez_menu ul.menu_list {
+	background-color: #FFFFFF;
+	width: 150px;
 }
 
-ul.ez_menu li a {
+ul.ez_menu ul.menu_list li {
+	font-weight: normal;
+}
+
+ul.ez_menu ul.menu_list li:hover {
+	background-color: #F5F5F5;
 	text-decoration: none;
 }
 
-ul.ez_menu li:nth-child(3) a {
-	color: #FFFFFF;
+ul.ez_menu li {
+	float: left;
+	font-weight: bold;
+	padding: 8px 20px 6px 12px;
+	position: relative;
+}
+
+ul.ez_menu li a:hover {
+	text-decoration: none;
 }
 
 ul.ez_menu li.menu_hover_on {
@@ -38,10 +51,6 @@ ul.ez_menu li.menu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.menu_hover_off {
-	background-color: #DDDDDD;
-}
-
 ul.ez_menu li.submenu_hover_on {
 	background: #FFFFFF url( images/arrow_asc.gif ) no-repeat right center;
 }
@@ -50,41 +59,12 @@ ul.ez_menu li.submenu_hover_on a {
 	color: #000000;
 }
 
-ul.ez_menu li.submenu_hover_off {
-	background: #DDDDDD none;
-	padding-right: 6px;
-}
-
-ul.ez_menu ul.menu_list {
-	background-color: #FFFFFF;
-	border: 1px solid #DDDDDD;
-	border-top: none;
-}
-
-ul.ez_menu ul.menu_list li {
-	font-weight: normal;
-}
-
-ul.ez_menu ul.menu_list li.submenu {
-	border-top: 1px dashed #DDDDDD;
-}
-
-ul.ez_menu ul.menu_list li.submenu ul {
-	border: 1px solid #DDDDDD;
-}
-
-ul.ez_menu ul.menu_list li a {
+ul.ez_menu li.submenu_hover_on > ul.menu_list li a {
 	color: #787878;
+	height: 16px;
+	padding: 4px 10px 6px 10px;
 }
 
-ul.ez_menu ul.menu_list li a:hover {
-	text-decoration: none;
-}
-
-ul.ez_menu ul.menu_list a.opt_hover_on {
-	background-color: #F5F5F5;
-}
-
-ul.ez_menu ul.menu_list span.opt_hover_off {
-	background-color: #FFFFFF;
+ul.ez_menu li.submenu_hover_off {
+	background: transparent none;
 }
