--- a/demo.css
+++ b/demo.css
@@ -68,3 +68,12 @@ ul.ez_menu li.submenu_hover_on > ul.menu_list li a {
 ul.ez_menu li.submenu_hover_off {
 	background: transparent none;
 }
+
+ul.ez_menu * li.submenu {
+	background: #FFFFFF url( images/arrow_rgt.gif ) no-repeat right center !important;
+	border-top: 1px dashed #EEEEEE !important;
+}
+
+ul.ez_menu * li.submenu ul.menu_list {
+	border-top: 1px solid #EEEEEE;
+}
