Removed hyphen from package name

--- a/jquery.ez.menu.css
+++ b/jquery.ez.menu.css
@@ -1,5 +1,5 @@
 /*
- *  EZ-Menu
+ *  EZ Menu
  *  An easy way to create a navigation menu from JSON
  *
  *  Copyright 2012-2014, Marc S. Brooks (http://mbrooks.info)
